fixed scrollbar bug and position #68

--- a/src/frontend/src/app/home-page/popups/profil/profil.component.css
+++ b/src/frontend/src/app/home-page/popups/profil/profil.component.css
@@ -7,8 +7,6 @@
   height: 100%;
   color: white;
   font-size: 20px;
-
-  background-color: blue;
 }
 
 /* Header */
@@ -22,8 +20,6 @@
   background-color: #1A202C;
   padding: 20px;
   margin: 10px;
-
-  background-color: green;
 }
 
 .profil-header-box {
@@ -61,8 +57,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  background-color: yellow;
 }
 
 .profil-win-counter {
@@ -91,7 +85,6 @@
 .profil-history {
   width: 100%;
   height: 100%;
-  background-color: orange;
 }
 
 .profil-history-title {
